Fix Java 17 List API usage in test